# hermes-newsroom-gossip

./: .gitignore  UX_ENHANCEMENT_PLAN_V2.md  docker-compose.yml  pyproject.toml
.hermes/: gossip-persona.md  prompt-critique.md
.hermes/artifacts/: finance-vertical-scaffold.md  top-20-content-verticals.json
.hermes/plans/: BUG_LIST.md  BUILD-PROMPT.md  distribution-plan-v2.md  distribution-plan.md  grok-review.md  strategy-v3.md
alembic/: env.py
alembic/versions/: 04fe8c71a0a5_add_sources_categories.py  156d4b138296_add_categories_column.py  3e1fe4d03ee4_initial_schema.py  a1b2c3d4e5f6_phase3_article_columns.py  b2c3d4e5f6a7_add_distributions.py  c3d4e5f6a7b8_distributions_unique_channel.py  d4e5f6a7b8c9_multi_vertical_safety.py
scripts/: BUG_LIST.md  arxiv_ingest.sh  cycle.py  cycle.sh  pipeline_cycle.sh  post_thread.py
src/newsroom/: __init__.py  breaker.py  budget.py  circuit_breaker.py  cli.py  config.py  corrections.py  dashboard.py  db.py  dedup.py  embedding.py  ingest.py  models.py  select.py  telemetry.py  temporal_worker.py  workflows.py
src/newsroom/distribute/: __init__.py  prompts.py  repackage.py
src/newsroom/eval/: __init__.py  drift.py  judge.py  runner.py
src/newsroom/llm/: __init__.py  client.py  hermes.py  mcp_stub.py  toolbus.py
src/newsroom/pipeline/: __init__.py  draft.py  escalation.py  factcheck.py  humanize.py  publish.py  research.py
src/newsroom/sources/: __init__.py  _base.py  arxiv.py  (+21 more)
tests/: test_factcheck_span.py  test_phase2b.py
web/: astro.config.mjs  package-lock.json  package.json
web/src/: content.config.ts
(+7 files in other folders)
