[project]
name = "hermes-newsroom"
version = "0.1.0"
description = "Autonomous AI x Crypto newsroom — arXiv to fact-gated, Astro-published synthesis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "arxiv>=4.0.0",
    "feedparser>=6.0.12",
    "greenlet>=3.5.2",
    "httpx>=0.28.1",
    "langfuse>=4.9.1",
    "mcp>=1.28.0",
    "openai>=2.43.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "temporalio>=1.29.0",
    "tenacity>=9.1.4",
    "trafilatura>=2.1.0",
    "typer>=0.25.1",
]

[project.scripts]
newsroom = "newsroom.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src layout: the import name is `newsroom`, sourced from src/newsroom.
packages = ["src/newsroom"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
